query scripted sql queries through the `HaikuDepot` generated class